--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "next-app-10",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "typescript": "^5"
-  }
+	"name": "next-app-10",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "prettier --write .",
+		"lint": "eslint"
+	},
+	"dependencies": {
+		"@supabase/ssr": "^0.8.0",
+		"@supabase/supabase-js": "^2.89.0",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@tanstack/react-query": "^5.90.16",
+		"next": "16.0.10",
+		"postcss": "^8.5.6",
+		"react": "19.2.1",
+		"react-dom": "19.2.1",
+		"tailwindcss": "^4.1.18"
+	},
+	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.91.2",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "16.0.10",
+		"eslint-config-prettier": "^10.1.8",
+		"prettier": "^3.7.4",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"typescript": "^5"
+	}
 }
